# scad

./: .gitmodules  amazing.scad  coffee-grinder.3mf  coffee-grinder.scad  coffee-grinder.stl  coffee-grinder3.scad  nohup.out  rope-pullup-handle-full-mk1.stl  rope-pullup-handle-test-2.stl  rope-pullup-handle-test.stl  rope-pullup-handle.scad  rope-pullup-handle.stl  screwdriverHolder.scad  triangle-link.scad  what-is-in-a-name.scad
bed-base-legs/: connector.scad  leg_left.stl  leg_left_0.4mm_PETG_MK3S_1h41m.gcode  leg_middle.stl  leg_middle_0.4mm_PETG_MK3S_2h32m.gcode  leg_middle_0.4mm_PETG_MK3S_2h33m.gcode  requirements.txt  run.sh
bed-base-legs/bed-base-legs/: __main__.py
bed-base-legs/output/: coffee-connector.scad
coffee-grinder/: __main__.py  coffee-connector.scad  coffee-grinder_base.scad  coffee-round-holder.scad  first_time_install.sh  pyproject.toml  requirements.txt
coffee-grinder/coffee-grinder/: __main__.py  nohup.out
coffee-grinder/coffee-grinder/lib/: grinder_base.py
coffee-grinder/coffee-grinder/lib/holder/: round_holder.py
coffee-grinder/lib/: dell_connector.py  grinder_base.py
coffee-grinder/lib/holder/: round_holder.py
coffee-grinder/tests/: test_coffee_grinder2.py
lib/directionality/: directionality.scad
light-fixture-mount/: mount.scad
name-to-3d/: __main__.py
notebook-cover/: notebook-cover2.scad
rope-pullup-handle/: __main__.py  pullup.scad  requirements.txt
