[tool.poetry]
name = "coffee"
version = "0.1.0"
description = ""
authors = ["lewoudar <XXX@XXX.com>"]

[tool.poetry.dependencies]
python = "^3.7"

toml = "^0.9"
numpy = { version = "1.18.2"}
scipy = { version = "1.2.3"}
solidpython = { version = "0.4.7"}

[tool.poetry.dev-dependencies]
#pytest = "^5.2"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
